# xtb_wrapper

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  README.rst  conanfile.py
.conan_test_package/: conanfile.py
src/: CMakeLists.txt
src/Xtb/: CMakeLists.txt  Files.cmake  config.cmake.in
src/Xtb/Python/: __init__.py  setup.py
src/Xtb/Xtb/: XtbModule.cpp  XtbModule.h
src/Xtb/Xtb/Wrapper/: GFN0Wrapper.cpp  GFN0Wrapper.h  GFN1Wrapper.cpp  GFN1Wrapper.h  GFN2Wrapper.cpp  GFN2Wrapper.h  GFNFFWrapper.cpp  GFNFFWrapper.h  XtbCalculatorBase.cpp  XtbCalculatorBase.h  XtbSettings.cpp  XtbSettings.h  XtbState.h
